--- a/1-7-newspaper-cover/index.html
+++ b/1-7-newspaper-cover/index.html
@@ -36,7 +36,7 @@
 			<section class="featured">
 				<div class="grid">
 					<div class="col-9">
-						<div class="row">
+						<div class="row border-bottom">
 							<div class="col-7">
 								<article class="article--featured">
 									<img
@@ -76,12 +76,60 @@
 								</div>
 							</div>
 						</div>
-						<div class="row">list of articles</div>
+						<div class="row">
+							<div class="col-12">
+								<div class="alert alert--gray">
+									<span class="alert__category">Featured</span>
+									<span class="alert__info">
+										Mahashivratri symbolizes a union of divinity with a purpose of overcoming darkness and
+										injustice.</span
+									>
+								</div>
+								<button class="btn btn--link--primary">Next</button>
+							</div>
+							<div class="col-12 border-bottom">
+								<div class="row">
+									<div class="col-4">
+										<article class="article--featured">
+											<img
+												src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
+												alt=""
+											/>
+											<h3 class="article--featured__title">
+												What One Photo Tells Us About North Korea’s Nuclear Program
+											</h3>
+										</article>
+									</div>
+									<div class="col-4">
+										<article class="article--featured">
+											<img
+												src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
+												alt=""
+											/>
+											<h3 class="article--featured__title">
+												What One Photo Tells Us About North Korea’s Nuclear Program
+											</h3>
+										</article>
+									</div>
+									<div class="col-4">
+										<article class="article--featured">
+											<img
+												src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
+												alt=""
+											/>
+											<h3 class="article--featured__title">
+												What One Photo Tells Us About North Korea’s Nuclear Program
+											</h3>
+										</article>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col-3">
 						<article class="article--info bg--gray" data-highlight="Quick Bites">
-							<h2 class="article--featured__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
-							<p class="article--featured__description">
+							<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
+							<p class="article--info__description">
 								Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
 								compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
 								its rally as the dollar edged lower.
@@ -93,8 +141,127 @@
 					</div>
 				</div>
 			</section>
-			<section class="middle"></section>
-			<section class="extended"></section>
+			<section class="extended">
+				<div class="row">
+					<div class="col-2">
+						<div class="article_group" data-highlight="World News">
+							<article class="article--info article--info--small">
+								<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
+								<p class="article--info__description">
+									Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
+									compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
+									its rally as the dollar edged lower.
+								</p>
+							</article>
+							<article class="article--info article--info--small">
+								<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
+								<p class="article--info__description">
+									Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
+									compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
+									its rally as the dollar edged lower.
+								</p>
+							</article>
+						</div>
+					</div>
+					<div class="col-5">
+						<div class="flex flex-col gap-16">
+							<div class="article_horizontal">
+								<h3 class="article_horizontal__title">The suit, brought by the autonomous car business Waymo</h3>
+								<div class="article_horizontal__bottom">
+									<p class="article__horizontal_description">
+										India’s government expressed shock after one citizen was killed and another wounded in a bar in
+										suburban Kansas. Another wounded in a bar in suburban Kansas.
+									</p>
+									<img
+										class="article__horizontal_thumbnail"
+										src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="article_horizontal">
+								<h3 class="article_horizontal__title">Uber Lawsuit Puts Spotlight on Rush for Driverless Cars</h3>
+								<div class="article_horizontal__bottom">
+									<p class="article__horizontal_description">
+										The suit, brought by the autonomous car business Waymo, accuses Uber and a star engineer, Anthony
+										Levandowski, of planning to steal trade secrets.
+									</p>
+								</div>
+							</div>
+							<div class="article_horizontal">
+								<h3 class="article_horizontal__title">Uber Lawsuit Puts Spotlight on Rush for Driverless Cars</h3>
+								<div class="article_horizontal__bottom">
+									<p class="article__horizontal_description">
+										India’s government expressed shock after one citizen was killed and another wounded in a bar in
+										suburban Kansas. Another wounded in a bar in suburban Kansas.
+									</p>
+									<img
+										class="article__horizontal_thumbnail"
+										src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
+										alt=""
+									/>
+								</div>
+							</div>
+							<div class="article_horizontal">
+								<h3 class="article_horizontal__title">planning to steal trade secrets.</h3>
+								<div class="article_horizontal__bottom">
+									<p class="article__horizontal_description">
+										The suit, brought by the autonomous car business Waymo, accuses Uber and a star engineer, Anthony
+										Levandowski, of planning to steal trade secrets.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-3">
+						<div class="flex h-full flex-col flex-justify-between">
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">Kangana sad that her ‘Rangoon’ scenes were cut by censorboard</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">Kajol-Ajay celebrate 18th wedding anniversary in Paris</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">Shahid wishes he was offered this Aamir Khan’s film last year!</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">
+									Lipstick Under My Burkha: CBFC defends its move of banning the film
+								</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">Varun-Alia’s new song ‘Aashiq Surrender Hua’ is out on YouTube</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">‘Jolly LLB 2’ box-office collection week 2</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">
+									Casting Ouch! The open dirty secret of showbiz culture in Bollywood
+								</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">Student arrested for the murder of model turned teacher</h5>
+							</article>
+							<article class="article__xsmall">
+								<h5 class="article--featured__title">Shahid wishes he was offered this Aamir Khan’s film last year!</h5>
+							</article>
+						</div>
+					</div>
+					<div class="col-2">
+						<div class="article_group" data-highlight="Sports News">
+							<article class="article--info article--info--small">
+								<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
+								<p class="article--info__description">
+									Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
+									compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
+									its rally as the dollar edged lower.
+								</p>
+							</article>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section class="others"></section>
 		</main>
 	</body>
