--- a/2-3-loja/index.html
+++ b/2-3-loja/index.html
@@ -17,11 +17,75 @@
 			<div class="nav__links">
 				<div class="nav__item nav__dropdown">
 					<div class="nav__dropdown__group__link">Seating</div>
-					<div class="nav__dropdown__items">asd</div>
+					<div class="nav__dropdown__items">
+						<div class="items__wrapper">
+							<ul>
+								<li>Shop by Category</li>
+								<li>Sectionals</li>
+								<li>Sofas</li>
+								<li>Loveseats</li>
+								<li>Accent Chairs</li>
+								<li>Sleepers</li>
+								<li>Sleep Kits</li>
+								<li>Ottomans</li>
+								<li>Seating Accessories</li>
+								<li>All Seating</li>
+							</ul>
+							<ul>
+								<li>Shop by Collection</li>
+								<li>Nomad Collection</li>
+								<li>Field Collection</li>
+								<li>Range Collection</li>
+								<li>Union Collection</li>
+								<li>NEW</li>
+								<li>Compare Collections</li>
+							</ul>
+							<ul>
+								<li>Shop by Upholstery</li>
+								<li>Performance Fabric Seating</li>
+								<li>Italian Leather Seating</li>
+								<li>Performance Velvet Seating</li>
+								<li>All Seating</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 				<div class="nav__item nav__dropdown">
-					<div class="nav__dropdown__group__link">Seating</div>
-					<div class="nav__dropdown__items"></div>
+					<div class="nav__dropdown__group__link">Living Room</div>
+					<div class="nav__dropdown__items">
+						<div class="items__wrapper">
+							<ul>
+								<li>Seating</li>
+								<li>Sectionals</li>
+								<li>Sofas</li>
+								<li>Accent Chairs</li>
+								<li>Sleepers</li>
+								<li>Fabric Seating</li>
+								<li>Leather Seating</li>
+								<li>Velvet Seating</li>
+								<li>Seating Accessories</li>
+								<li>All Seating</li>
+							</ul>
+							<ul>
+								<li>Tables, Carts & Benches</li>
+								<li>Coffee Tables</li>
+								<li>Side Tables</li>
+								<li>Bar Carts</li>
+								<li>Benches</li>
+								<li>All Tables & Carts</li>
+							</ul>
+							<ul>
+								<li>Accessories</li>
+								<li>Seating Accessories</li>
+								<li>Throw Pillows</li>
+								<li>Throw Blankets</li>
+								<li>Trays</li>
+								<li>Lighting</li>
+								<li>Clearance</li>
+								<li>All Accessories</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -30,33 +94,34 @@
 			</div>
 		</nav>
 		<div class="splash_screen">
+			<img src="assets/splash-screen.webp" alt="" />
 			<div class="splash_screen__description"></div>
 		</div>
 
 		<section class="section--h-half section__categories">
 			<h3 class="section__title">Clever Design, devilered free</h3>
 			<div class="section__body grid grid--3">
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/category-seating.webp" alt="" />
 					<div class="thumbnail__title alternate-font">Seating</div>
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/category-outdoor.webp" alt="" />
 					<div class="thumbnail__title alternate-font">Outdoor</div>
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/category-storage.webp" alt="" />
 					<div class="thumbnail__title alternate-font">Storage</div>
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/category-bedroom.webp" alt="" />
 					<div class="thumbnail__title alternate-font">Bedroom</div>
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/category-tables.webp" alt="" />
 					<div class="thumbnail__title alternate-font">Tables</div>
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/category-rugs.webp" alt="" />
 					<div class="thumbnail__title alternate-font">Rugs</div>
 				</a>
@@ -73,16 +138,16 @@
 		<section class="section--h-half section__collections">
 			<h3 class="section__title">Explore each unique collection</h3>
 			<div class="section__body grid grid--4">
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/Nomad-Collection-V.webp" alt="" />
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/Nomad-Collection-V.webp" alt="" />
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/Nomad-Collection-V.webp" alt="" />
 				</a>
-				<a href="" class="thumbnail">
+				<a href="category.html" class="thumbnail">
 					<img src="./assets/Nomad-Collection-V.webp" alt="" />
 				</a>
 			</div>
@@ -113,6 +178,152 @@
 				</a>
 				<a href="" class="carousel__card">
 					<img src="./assets/carousel/Kettle-Side-Table.webp" alt="" />
+				</a>
+			</div>
+		</section>
+		<section class="section--third section__newsletter">
+			<div class="form__field">
+				<input type="text" placeholder="Add your email" />
+				<button type="submit">Subscribe</button>
+			</div>
+
+			<div class="socials">
+				<a href="">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						viewBox="0,0,256,256"
+						width="30px"
+						height="30px"
+						fill-rule="nonzero"
+					>
+						<g
+							fill="#ffffff"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<g transform="scale(8.53333,8.53333)">
+								<path
+									d="M15,3c-6.627,0 -12,5.373 -12,12c0,6.016 4.432,10.984 10.206,11.852v-8.672h-2.969v-3.154h2.969v-2.099c0,-3.475 1.693,-5 4.581,-5c1.383,0 2.115,0.103 2.461,0.149v2.753h-1.97c-1.226,0 -1.654,1.163 -1.654,2.473v1.724h3.593l-0.487,3.154h-3.106v8.697c5.857,-0.794 10.376,-5.802 10.376,-11.877c0,-6.627 -5.373,-12 -12,-12z"
+								></path>
+							</g>
+						</g>
+					</svg>
+				</a>
+				<a href="">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						viewBox="0,0,256,256"
+						width="30px"
+						height="30px"
+						fill-rule="nonzero"
+					>
+						<g
+							fill-opacity="0"
+							fill="#000000"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<path d="M0,256v-256h256v256z" id="bgRectangle"></path>
+						</g>
+						<g
+							fill="#ffffff"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<g transform="scale(8.53333,8.53333)">
+								<path
+									d="M9.99805,3c-3.859,0 -6.99805,3.14195 -6.99805,7.00195v10c0,3.859 3.14195,6.99805 7.00195,6.99805h10c3.859,0 6.99805,-3.14195 6.99805,-7.00195v-10c0,-3.859 -3.14195,-6.99805 -7.00195,-6.99805zM22,7c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1zM15,9c3.309,0 6,2.691 6,6c0,3.309 -2.691,6 -6,6c-3.309,0 -6,-2.691 -6,-6c0,-3.309 2.691,-6 6,-6zM15,11c-2.20914,0 -4,1.79086 -4,4c0,2.20914 1.79086,4 4,4c2.20914,0 4,-1.79086 4,-4c0,-2.20914 -1.79086,-4 -4,-4z"
+								></path>
+							</g>
+						</g>
+					</svg>
+				</a>
+				<a href="">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						viewBox="0,0,256,256"
+						width="30px"
+						height="30px"
+						fill-rule="nonzero"
+					>
+						<g
+							fill-opacity="0"
+							fill="#dddddd"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<path d="M0,256v-256h256v256z" id="bgRectangle"></path>
+						</g>
+						<g
+							fill="#ffffff"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<g transform="scale(8.53333,8.53333)">
+								<path
+									d="M15,4c-4.186,0 -9.61914,1.04883 -9.61914,1.04883l-0.01367,0.01563c-1.90652,0.30491 -3.36719,1.94317 -3.36719,3.93555v6v0.00195v5.99805v0.00195c0.00384,1.96564 1.4353,3.63719 3.37695,3.94336l0.00391,0.00586c0,0 5.43314,1.05078 9.61914,1.05078c4.186,0 9.61914,-1.05078 9.61914,-1.05078l0.00195,-0.00195c1.94389,-0.30554 3.37683,-1.97951 3.37891,-3.94727v-0.00195v-5.99805v-0.00195v-6c-0.00288,-1.96638 -1.43457,-3.63903 -3.37695,-3.94531l-0.00391,-0.00586c0,0 -5.43314,-1.04883 -9.61914,-1.04883zM12,10.39844l8,4.60156l-8,4.60156z"
+								></path>
+							</g>
+						</g>
+					</svg>
 				</a>
 			</div>
 		</section>
