--- a/exercises/1-5-mondrian/index.html
+++ b/exercises/1-5-mondrian/index.html
@@ -8,6 +8,28 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<div class="board board-a">
+			<div class="board-box-1 bg-purple"></div>
+			<div class="board-box-2 bg-green"></div>
+		</div>
+
+		<div class="board board-b">
+			<div class="board-box-1 bg-purple"></div>
+			<div class="board-box-2 bg-green"></div>
+			<div class="board-box-3 bg-green"></div>
+		</div>
+
+		<div class="board board-c">
+			<div class="board-box-1 bg-purple"></div>
+			<div class="board-box-2 bg-green"></div>
+			<div class="board-box-3 bg-pink"></div>
+		</div>
+
+		<div class="board board-0">
+			<div class="board-box-1 bg-purple"></div>
+			<div class="board-box-2 bg-green"></div>
+		</div>
+
 		<div class="board board-1">
 			<div class="board-box-1 bg-purple"></div>
 			<div class="board-box-2">
@@ -44,12 +66,6 @@
 
 		<div class="board board-5">
 			<div class="board-box-1 bg-purple">
-				<div class="board-5-inner-1 bg-orange">
-					<div class="board-5-inner-1-1 bg-red"></div>
-					<div class="board-5-inner-1-2 bg-red"></div>
-					<div class="board-5-inner-1-3 bg-red"></div>
-				</div>
-				<div class="board-5-inner-2 bg-orange"></div>
 				<div class="board-5-inner-3 bg-orange"></div>
 			</div>
 			<div class="board-box-2 bg-green"></div>
