--- a/exercises/1-6-newspaper-cover/index.html
+++ b/exercises/1-6-newspaper-cover/index.html
@@ -6,20 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="reset.css" />
-		<link rel="stylesheet" href="typography.css" />
+
+		<link rel="stylesheet" href="helpers.css" />
 		<link rel="stylesheet" href="grid.css" />
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="articles.css" />
 	</head>
 	<body>
-		<main class="newspaper__container">
-			<section class="pre_header">
-				<span>Friday, February 24, 2017</span>
-			</section>
-			<section class="header">
-				<h1>The News</h1>
-			</section>
-			<section class="nav">
-				<ul class="nav__items">
+		<main class="newspaper">
+			<section class="timestamp"></section>
+			<section class="headline"></section>
+			<nav class="navigation">
+				<ul class="navigation__links">
 					<li>World</li>
 					<li>Politics</li>
 					<li>Business</li>
@@ -32,237 +29,63 @@
 					<li>Travel</li>
 					<li>More</li>
 				</ul>
-			</section>
-			<section class="featured">
-				<div class="grid">
-					<div class="col-9">
-						<div class="row border-bottom">
-							<div class="col-7">
-								<article class="article--featured">
-									<img
-										src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
-										alt=""
-									/>
-									<h3 class="article--featured__title">What One Photo Tells Us About North Korea’s Nuclear Program</h3>
-									<p class="article--featured__description">
-										Clues from a propaganda photo reveal details about North Korea’s expanding weapons programs and
-										internal politics.
-									</p>
-								</article>
-							</div>
-							<div class="col-5">
-								<div class="small_articles__container articles_group" data-highlight="Top Stories">
-									<article class="article__small">
-										<h5 class="article--featured__title">PM unveils Shiva statue in Coimbatore on Mahashivratri</h5>
-									</article>
-									<article class="article__small">
-										<h5 class="article--featured__title">PM Modi: Kanpur train accident was a conspiracy</h5>
-									</article>
-									<article class="article__small">
-										<h5 class="article--featured__title">Sena, BJP have no option but to join hands again</h5>
-									</article>
-									<article class="article__small">
-										<h5 class="article--featured__title">Thousands bid adieu to martyred jawan in Kashmir</h5>
-									</article>
-									<article class="article__small">
-										<h5 class="article--featured__title">Jayalalithaa's niece Deepa floats political outfit</h5>
-									</article>
-									<article class="article__small">
-										<h5 class="article--featured__title">China made mistake of ignoring India's talent</h5>
-									</article>
-									<article class="article__small">
-										<h5 class="article--featured__title">Jayalalithaa's niece Deepa floats political outfit</h5>
-									</article>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-12">
-								<div class="alert alert--gray">
-									<span class="alert__category">Featured</span>
-									<span class="alert__info">
-										Mahashivratri symbolizes a union of divinity with a purpose of overcoming darkness and
-										injustice.</span
-									>
-								</div>
-								<button class="btn btn--link--primary">Next</button>
-							</div>
-							<div class="col-12 border-bottom">
-								<div class="row">
-									<div class="col-4">
-										<article class="article--featured">
-											<img
-												src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
-												alt=""
-											/>
-											<h3 class="article--featured__title">
-												What One Photo Tells Us About North Korea’s Nuclear Program
-											</h3>
-										</article>
-									</div>
-									<div class="col-4">
-										<article class="article--featured">
-											<img
-												src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
-												alt=""
-											/>
-											<h3 class="article--featured__title">
-												What One Photo Tells Us About North Korea’s Nuclear Program
-											</h3>
-										</article>
-									</div>
-									<div class="col-4">
-										<article class="article--featured">
-											<img
-												src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
-												alt=""
-											/>
-											<h3 class="article--featured__title">
-												What One Photo Tells Us About North Korea’s Nuclear Program
-											</h3>
-										</article>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-3">
-						<article class="article--info bg--gray" data-highlight="Quick Bites">
-							<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
-							<p class="article--info__description">
-								Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
-								compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
-								its rally as the dollar edged lower.
-							</p>
-							<div class="actions">
-								<button class="btn btn--link--primary">Next</button>
-							</div>
-						</article>
+			</nav>
+			<section class="main">
+				<div class="">
+					<div class="article article--large">
+						<div class="article__thumbnail"></div>
+						<p class="article__title">US government launches criminal investigation.</p>
 					</div>
 				</div>
+				<div class="articles__headliners">
+					<a href="" class="headline__article"> PM unveils Shiva statue in Coimbatore on Mahashivratri</a>
+					<a href="" class="headline__article"> PM Modi: Kanpur train accident was a conspiracy</a>
+					<a href="" class="headline__article"> Sena, BJP have no option but to join hands again</a>
+					<a href="" class="headline__article"> Thousands bid adieu to martyred jawan in Kashmir</a>
+					<a href="" class="headline__article"> Jayalalithaas niece Deepa floats political outfit</a>
+					<a href="" class="headline__article"> China made mistake of ignoring Indias talent</a>
+					<a href="" class="headline__article"> Jayalalithaas niece Deepa floats political outfit</a>
+				</div>
+				<div class="">main</div>
 			</section>
-			<section class="extended">
-				<div class="row">
-					<div class="col-2">
-						<div class="article_group" data-highlight="World News">
-							<article class="article--info article--info--small">
-								<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
-								<p class="article--info__description">
-									Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
-									compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
-									its rally as the dollar edged lower.
-								</p>
-							</article>
-							<article class="article--info article--info--small">
-								<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
-								<p class="article--info__description">
-									Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
-									compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
-									its rally as the dollar edged lower.
-								</p>
-							</article>
-						</div>
-					</div>
-					<div class="col-5">
-						<div class="flex flex-col gap-16">
-							<div class="article_horizontal">
-								<h3 class="article_horizontal__title">The suit, brought by the autonomous car business Waymo</h3>
-								<div class="article_horizontal__bottom">
-									<p class="article__horizontal_description">
-										India’s government expressed shock after one citizen was killed and another wounded in a bar in
-										suburban Kansas. Another wounded in a bar in suburban Kansas.
-									</p>
-									<img
-										class="article__horizontal_thumbnail"
-										src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
-										alt=""
-									/>
-								</div>
-							</div>
-							<div class="article_horizontal">
-								<h3 class="article_horizontal__title">Uber Lawsuit Puts Spotlight on Rush for Driverless Cars</h3>
-								<div class="article_horizontal__bottom">
-									<p class="article__horizontal_description">
-										The suit, brought by the autonomous car business Waymo, accuses Uber and a star engineer, Anthony
-										Levandowski, of planning to steal trade secrets.
-									</p>
-								</div>
-							</div>
-							<div class="article_horizontal">
-								<h3 class="article_horizontal__title">Uber Lawsuit Puts Spotlight on Rush for Driverless Cars</h3>
-								<div class="article_horizontal__bottom">
-									<p class="article__horizontal_description">
-										India’s government expressed shock after one citizen was killed and another wounded in a bar in
-										suburban Kansas. Another wounded in a bar in suburban Kansas.
-									</p>
-									<img
-										class="article__horizontal_thumbnail"
-										src="https://images.unsplash.com/photo-1678872590530-181ff9b5db92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
-										alt=""
-									/>
-								</div>
-							</div>
-							<div class="article_horizontal">
-								<h3 class="article_horizontal__title">planning to steal trade secrets.</h3>
-								<div class="article_horizontal__bottom">
-									<p class="article__horizontal_description">
-										The suit, brought by the autonomous car business Waymo, accuses Uber and a star engineer, Anthony
-										Levandowski, of planning to steal trade secrets.
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-3">
-						<div class="flex h-full flex-col flex-justify-between">
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">Kangana sad that her ‘Rangoon’ scenes were cut by censorboard</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">Kajol-Ajay celebrate 18th wedding anniversary in Paris</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">Shahid wishes he was offered this Aamir Khan’s film last year!</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">
-									Lipstick Under My Burkha: CBFC defends its move of banning the film
-								</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">Varun-Alia’s new song ‘Aashiq Surrender Hua’ is out on YouTube</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">‘Jolly LLB 2’ box-office collection week 2</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">
-									Casting Ouch! The open dirty secret of showbiz culture in Bollywood
-								</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">Student arrested for the murder of model turned teacher</h5>
-							</article>
-							<article class="article__xsmall">
-								<h5 class="article--featured__title">Shahid wishes he was offered this Aamir Khan’s film last year!</h5>
-							</article>
-						</div>
-					</div>
-					<div class="col-2">
-						<div class="article_group" data-highlight="Sports News">
-							<article class="article--info article--info--small">
-								<h2 class="article--info__title">Stocks Sell Off, Gold Rises Ahead of Trump Speech: Markets Wrap</h2>
-								<p class="article--info__description">
-									Global stocks retreated, erasing gains for the week as a glum set of European corporate earnings
-									compounded investor nervousness before a major speech from U.S. President Donald Trump. Gold extended
-									its rally as the dollar edged lower.
-								</p>
-							</article>
-						</div>
+			<section class="secondary">
+				<div class="border-bottom">
+					<div class="article article--small">
+						<div class="article__thumbnail"></div>
+						<p class="article__title">US government launches criminal investigation.</p>
 					</div>
 				</div>
+				<div class="border-bottom">
+					<div class="article article--small">
+						<div class="article__thumbnail"></div>
+						<p class="article__title">US government launches criminal investigation.</p>
+					</div>
+				</div>
+				<div class="">
+					<div class="article article--small">
+						<div class="article__thumbnail"></div>
+						<p class="article__title">US government launches criminal investigation.</p>
+					</div>
+				</div>
+				<div class="">secondary</div>
 			</section>
-			<section class="others"></section>
+			<section class="middle">
+				<div class="border-right">middle</div>
+				<div class="border-right">middle</div>
+
+				<div class="border-right articles__headliners">
+					<a href="" class="headline__article"> Kangana sad that her ‘Rangoon’ scenes were cut by censorboard</a>
+					<a href="" class="headline__article"> Kajol-Ajay celebrate 18th wedding anniversary in Paris</a>
+					<a href="" class="headline__article"> Shahid wishes he was offered this Aamir Khan’s film last year!</a>
+					<a href="" class="headline__article"> Lipstick Under My Burkha: CBFC defends its move of banning the film</a>
+					<a href="" class="headline__article"> Varun-Alia’s new song ‘Aashiq Surrender Hua’ is out on YouTube</a>
+					<a href="" class="headline__article"> ‘Jolly LLB 2’ box-office collection week 2</a>
+					<a href="" class="headline__article"> Casting Ouch! The open dirty secret of showbiz culture in Bollywood</a>
+					<a href="" class="headline__article"> Student arrested for the murder of model turned teacher</a>
+					<a href="" class="headline__article"> Shahid wishes he was offered this Aamir Khan’s film last year!</a>
+				</div>
+				<div class="">middle</div>
+			</section>
 		</main>
 	</body>
 </html>
