--- a/exercises-templates/1-5-mondrian/index.html
+++ b/exercises-templates/1-5-mondrian/index.html
@@ -7,5 +7,7 @@
 		<title>Mondrian</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="board"></div>
+	</body>
 </html>
