--- a/index.html
+++ b/index.html
@@ -93,9 +93,14 @@
 		<!-- presentations -->
 		<h3 class="section__title">Apresentações</h3>
 		<section class="presentations" id="presentations__wrapper"></section>
+
 		<!-- exercicios -->
 		<h3 class="section__title">Exercícios</h3>
 		<section class="exercises" id="exercises__wrapper"></section>
+
+		<!-- exercicios -->
+		<h3 class="section__title">Materiais de Apoio</h3>
+		<section class="materials" id="materials__wrapper"></section>
 	</body>
 
 	<script type="module" src="common/main.js"></script>
