--- a/exercises/1-3-mondrian/index.html
+++ b/exercises/1-3-mondrian/index.html
@@ -8,6 +8,24 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<div class="board ex8-board">
+			<div class="bg-purple ex8-box"></div>
+			<div class="bg-green ex8-box ex8-width">
+				<div class="ex8-container">
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-orange ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-orange ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+					<div class="bg-pink ex8-wrapbox"></div>
+				</div>
+			</div>
+		</div>
+
 		<div class="board board-a">
 			<div class="board-box-1 bg-purple"></div>
 			<div class="board-box-2 bg-green"></div>
