--- a/exercises/2-1-loja/category.html
+++ b/exercises/2-1-loja/category.html
@@ -42,66 +42,66 @@
 				<div class="category__filters"></div>
 
 				<div class="products">
-					<div class="product__card">
+					<a href="product.html" class="product__card">
 						<div class="thumbnails">
-							<img src="./assets/products/1/NSF-CG-3-MD-DW-TF.webp" alt="" class="featured__image" />
-							<img src="./assets/products/1/Sofa-Sectional-Fabric.webp" alt="" class="secondary__image" />
+							<img src="./assets/products/1/product.webp" alt="" class="featured__image" />
+							<img src="./assets/products/1/product-hover.webp" alt="" class="secondary__image" />
 						</div>
 						<div class="product__description">
 							<p class="product__title">Nomad Sofa</p>
 							<p class="product__price">$1595 or as low as $100/mo</p>
 						</div>
-					</div>
-					<div class="product__card">
+					</a>
+					<a href="product.html" class="product__card">
 						<div class="thumbnails">
-							<img src="./assets/products/1/NSF-CG-3-MD-DW-TF.webp" alt="" class="featured__image" />
-							<img src="./assets/products/1/Sofa-Sectional-Fabric.webp" alt="" class="secondary__image" />
+							<img src="./assets/products/2/product.webp" alt="" class="featured__image" />
+							<img src="./assets/products/2/product-hover.webp" alt="" class="secondary__image" />
 						</div>
 						<div class="product__description">
 							<p class="product__title">Nomad Sofa</p>
 							<p class="product__price">$1595 or as low as $100/mo</p>
 						</div>
-					</div>
-					<div class="product__card">
+					</a>
+					<a href="product.html" class="product__card">
 						<div class="thumbnails">
-							<img src="./assets/products/1/NSF-CG-3-MD-DW-TF.webp" alt="" class="featured__image" />
-							<img src="./assets/products/1/Sofa-Sectional-Fabric.webp" alt="" class="secondary__image" />
+							<img src="./assets/products/3/product.webp" alt="" class="featured__image" />
+							<img src="./assets/products/3/product-hover.webp" alt="" class="secondary__image" />
 						</div>
 						<div class="product__description">
 							<p class="product__title">Nomad Sofa</p>
 							<p class="product__price">$1595 or as low as $100/mo</p>
 						</div>
-					</div>
-					<div class="product__card">
+					</a>
+					<a href="product.html" class="product__card">
 						<div class="thumbnails">
-							<img src="./assets/products/1/NSF-CG-3-MD-DW-TF.webp" alt="" class="featured__image" />
-							<img src="./assets/products/1/Sofa-Sectional-Fabric.webp" alt="" class="secondary__image" />
+							<img src="./assets/products/4/product.webp" alt="" class="featured__image" />
+							<img src="./assets/products/4/product-hover.webp" alt="" class="secondary__image" />
 						</div>
 						<div class="product__description">
 							<p class="product__title">Nomad Sofa</p>
 							<p class="product__price">$1595 or as low as $100/mo</p>
 						</div>
-					</div>
-					<div class="product__card">
+					</a>
+					<a href="product.html" class="product__card">
 						<div class="thumbnails">
-							<img src="./assets/products/1/NSF-CG-3-MD-DW-TF.webp" alt="" class="featured__image" />
-							<img src="./assets/products/1/Sofa-Sectional-Fabric.webp" alt="" class="secondary__image" />
+							<img src="./assets/products/5/product.webp" alt="" class="featured__image" />
+							<img src="./assets/products/5/product-hover.webp" alt="" class="secondary__image" />
 						</div>
 						<div class="product__description">
 							<p class="product__title">Nomad Sofa</p>
 							<p class="product__price">$1595 or as low as $100/mo</p>
 						</div>
-					</div>
-					<div class="product__card">
+					</a>
+					<a href="product.html" class="product__card">
 						<div class="thumbnails">
-							<img src="./assets/products/1/NSF-CG-3-MD-DW-TF.webp" alt="" class="featured__image" />
-							<img src="./assets/products/1/Sofa-Sectional-Fabric.webp" alt="" class="secondary__image" />
+							<img src="./assets/products/6/product.webp" alt="" class="featured__image" />
+							<img src="./assets/products/6/product-hover.webp" alt="" class="secondary__image" />
 						</div>
 						<div class="product__description">
 							<p class="product__title">Nomad Sofa</p>
 							<p class="product__price">$1595 or as low as $100/mo</p>
 						</div>
-					</div>
+					</a>
 				</div>
 			</section>
 		</main>
