--- a/examples/responsive-grid/index.html
+++ b/examples/responsive-grid/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="grid.css" />
 	</head>
 	<body>
 		<div class="row">
@@ -26,6 +26,21 @@
 			<div class="col-lg-3">col</div>
 			<div class="col-lg-3">col</div>
 			<div class="col-lg-3">col</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-8">col</div>
+			<div class="col-lg-4">col</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-4">col</div>
+			<div class="col-lg-8">col</div>
+		</div>
+
+		<div class="container row">
+			<div class="left col-lg-3 d-sm-none">sidebar</div>
+			<div class="right col-lg-9">main</div>
 		</div>
 	</body>
 </html>
