--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<a href="#content__wrapper">Conteúdo</a>
 				<a href="#presentations__wrapper">Apresentações</a>
 				<a href="#exercises__wrapper">Exercícios</a>
-				<a href="">Materiais de Apoio</a>
+				<a href="#materials__wrapper">Materiais de Apoio</a>
 			</nav>
 		</section>
 
