--- a/exercises/0-4-newsletter-table/index.html
+++ b/exercises/0-4-newsletter-table/index.html
@@ -155,7 +155,7 @@
 				<td style="text-align: center; background: gray; color: white" colspan="3">
 					<p style="padding: 12px 0">
 						<span style="margin-left: 8px; padding-left: 8px">5th june 2022</span>
-						<span style="margin-left: 8px; border-left: 1px solid white; padding-left: 8px">@EDIT Template</span>
+						<span style="margin-left: 8px; border-left: 1px solid white; padding-left: 8px">EDIT Template</span>
 						<span style="margin-left: 8px; border-left: 1px solid white; padding-left: 8px">123-132-123123</span>
 					</p>
 				</td>
