--- a/exercises/1-0-css-design-systems/index.html
+++ b/exercises/1-0-css-design-systems/index.html
@@ -4,22 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		<div class="d-flex">
-			<a href="" class="card">
+		<div class="card__group">
+			<a href="button.html" class="card">
 				<p>Button</p>
 			</a>
-			<a href="" class="card">
+			<a href="button-group.html" class="card">
 				<p>Button Group</p>
 			</a>
-			<a href="" class="card">
+			<a href="avatar.html" class="card">
 				<p>Avatar</p>
 			</a>
 			<a href="input.html" class="card">
 				<p>Input</p>
 			</a>
-			<a href="" class="card">
+			<a href="tabs.html" class="card">
 				<p>Tabs</p>
 			</a>
 		</div>
