--- a/examples/responsive-images/index.html
+++ b/examples/responsive-images/index.html
@@ -7,15 +7,15 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<img src="assets/dog-sm.jpeg" alt="" />
-		<!-- <video muted autoplay src="./assets/sample.mp4"></video> -->
+		<!-- <img src="assets/dog-sm.jpeg" alt="" />
+		<video muted autoplay src="./assets/sample.mp4"></video> -->
 
 		<img
 			src="assets/dog-sm.jpeg"
 			alt=""
 			srcset="assets/dog-sm.jpeg 300w, assets/dog-md.jpeg 600w, assets/dog-lg.jpeg 1200w"
-			sizes="(max-width: 768px) 10vw,
-                    (max-width: 1024px) 50vw,
+			sizes="(max-width: 768px) 100vw,
+                    (max-width: 1024px) 100vw,
                     100vw"
 		/>
 	</body>
