--- a/exercises/0-4-newsletter-table/index.html
+++ b/exercises/0-4-newsletter-table/index.html
@@ -150,13 +150,24 @@
 				border-radius: 8px;
 			"
 		>
+			<style>
+				.link {
+					padding: 12px;
+					text-align: center;
+					vertical-align: middle;
+				}
+
+				.link--active {
+					background: red;
+				}
+			</style>
 			<tr style="border-bottom: 1px solid black">
-				<td style="padding: 12px; text-align: center; vertical-align: middle">About</td>
-				<td style="padding: 12px; text-align: center; vertical-align: middle">Portfolio</td>
-				<td style="padding: 12px; text-align: center; vertical-align: middle">Sections</td>
-				<td style="padding: 12px; text-align: center; vertical-align: middle">News</td>
-				<td style="padding: 12px; text-align: center; vertical-align: middle">Daily</td>
-				<td style="padding: 12px; text-align: center; vertical-align: middle">Contacts</td>
+				<td class="link link--active">About</td>
+				<td class="link">Portfolio</td>
+				<td class="link">Sections</td>
+				<td class="link">News</td>
+				<td class="link">Daily</td>
+				<td class="link">Contacts</td>
 			</tr>
 			<tr>
 				<td colspan="6" style="text-align: center; padding: 24px 0">
