--- a/examples/sports-card/index.html
+++ b/examples/sports-card/index.html
@@ -5,143 +5,35 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="reset.css" />
+		<link rel="stylesheet" href="styles.css" />
 	</head>
-	<style>
-		@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
-
-		html,
-		body {
-			margin: 0;
-			padding: 0;
-			min-height: 100vh;
-			display: flex;
-			gap: 32px;
-			width: 100%;
-			justify-content: center;
-			align-items: center;
-			background: linear-gradient(90deg, red, blue);
-			font-family: "Open Sans", sans-serif;
-		}
-
-		.card {
-			background: white;
-			/* min-width: 300px;
-			max-width: 400px; */
-			display: inline-block;
-			width: clamp(300px, 50vh, 350px);
-			height: 70vh;
-			border-radius: 8px;
-			position: relative;
-		}
-
-		.card__content {
-			background: orange;
-			height: 80%;
-			padding: 8px;
-			position: relative;
-			overflow: hidden;
-			border-radius: 8px 8px 0 0;
-		}
-
-		.card__actions {
-			height: 20%;
-		}
-
-		.btn {
-			display: block;
-			padding: 8px 16px;
-			background: blue;
-			border: 0;
-			color: white;
-			margin: 0 auto 8px auto;
-			min-height: 36px;
-			border-radius: 36px;
-			z-index: 9;
-			position: relative;
-		}
-
-		.btn-outline-success {
-			background: transparent;
-			border: 2px solid blue;
-			color: blue;
-		}
-
-		.btn-outline-success:hover {
-			background: blue;
-			color: white;
-		}
-
-		.label {
-			display: block;
-			text-align: center;
-			font-size: 0.7rem;
-		}
-
-		.card__content__header {
-			position: relative;
-		}
-		.card__content__header span {
-			position: absolute;
-			right: 8px;
-		}
-
-		h3 {
-			font-size: 1.2rem;
-			color: white;
-		}
-
-		p {
-			font-size: 0.9rem;
-			color: white;
-		}
-
-		.backdrop {
-			font-size: 15rem;
-			font-weight: bold;
-			color: white;
-			bottom: 0;
-			position: absolute;
-			padding: 0;
-			display: block;
-			line-height: 100%;
-			left: -10px;
-			opacity: 0.5;
-		}
-
-		.thumbnail {
-			position: absolute;
-			bottom: -40px;
-			left: -10px;
-			width: 120%;
-		}
-	</style>
 	<body>
-		<div class="backdrop_container"></div>
 		<div class="card">
-			<div class="card__content">
-				<div class="card__content__header">
-					<img src="" alt="" />
-					<span>120€</span>
+			<div class="card__wrapper">
+				<div class="card__header">
+					<a href="www.nike.com" class="card__logo">
+						<img src="https://i.ibb.co/q7RKcZk/nike.png" alt="" />
+					</a>
+
+					<p class="card__price">120€</p>
 				</div>
-				<div class="card__content__description">
-					<h3>AIR STRUCTURE 1</h3>
-					<p>
+				<div class="card__body">
+					<h3 class="card__title">Air Structure 1</h3>
+
+					<p class="card__description">
 						From the Flymesh upper to the triple-density foam midsole, the Nike Air Zoom Structure 19 Men's Running Shoe
-						offers plenty of support and the response you need for a smooth, stable ride that feels ultra fast. AI
+						offers plenty of support and the response you need for a smooth, stable ride that feels ultra fast.
 					</p>
+
+					<span class="card__backdrop">AIR</span>
 				</div>
-				<span class="backdrop">AIR</span>
+				<img src="nike19.png" alt="" class="foreground-image" />
 			</div>
 			<div class="card__actions">
-				<button class="btn btn-outline-success">Buy</button>
-				<span class="label">MEN RUNNING SHOES</span>
+				<button>Buy</button>
+				<span>Men Running Shoes</span>
 			</div>
-
-			<img class="thumbnail" src="../../exercises/1-4-sports-card/nike19.png" alt="" />
 		</div>
-		<!-- <div class="card">
-			<div class="card__content"></div>
-			<div class="card__actions"></div>
-		</div> -->
 	</body>
 </html>
