chore: add files

--- a/exercises/responsive/index.html
+++ b/exercises/responsive/index.html
@@ -12,8 +12,8 @@
 			<div class="toolbar">
 				<div class="menu">
 					<button class="menu__link">Arts</button>
-					<button class="menu__link menu__link--active">Fashion</button>
-					<button class="menu__link">Sports</button>
+					<button class="menu__link">Fashion</button>
+					<button class="menu__link menu__link--active">Sports</button>
 					<button class="menu__link">Music</button>
 					<button class="menu__link">Shopping</button>
 				</div>
