--- a/exercises/2-1-loja/category.html
+++ b/exercises/2-1-loja/category.html
@@ -17,16 +17,76 @@
 			<div class="nav__links">
 				<div class="nav__item nav__dropdown">
 					<div class="nav__dropdown__group__link">Seating</div>
-					<div class="nav__dropdown__items">asd</div>
+					<div class="nav__dropdown__items">
+						<div class="items__wrapper">
+							<ul>
+								<li>Shop by Category</li>
+								<li>Sectionals</li>
+								<li>Sofas</li>
+								<li>Loveseats</li>
+								<li>Accent Chairs</li>
+								<li>Sleepers</li>
+								<li>Sleep Kits</li>
+								<li>Ottomans</li>
+								<li>Seating Accessories</li>
+								<li>All Seating</li>
+							</ul>
+							<ul>
+								<li>Shop by Collection</li>
+								<li>Nomad Collection</li>
+								<li>Field Collection</li>
+								<li>Range Collection</li>
+								<li>Union Collection</li>
+								<li>NEW</li>
+								<li>Compare Collections</li>
+							</ul>
+							<ul>
+								<li>Shop by Upholstery</li>
+								<li>Performance Fabric Seating</li>
+								<li>Italian Leather Seating</li>
+								<li>Performance Velvet Seating</li>
+								<li>All Seating</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 				<div class="nav__item nav__dropdown">
-					<div class="nav__dropdown__group__link">Seating</div>
-					<div class="nav__dropdown__items"></div>
+					<div class="nav__dropdown__group__link">Living Room</div>
+					<div class="nav__dropdown__items">
+						<div class="items__wrapper">
+							<ul>
+								<li>Seating</li>
+								<li>Sectionals</li>
+								<li>Sofas</li>
+								<li>Accent Chairs</li>
+								<li>Sleepers</li>
+								<li>Fabric Seating</li>
+								<li>Leather Seating</li>
+								<li>Velvet Seating</li>
+								<li>Seating Accessories</li>
+								<li>All Seating</li>
+							</ul>
+							<ul>
+								<li>Tables, Carts & Benches</li>
+								<li>Coffee Tables</li>
+								<li>Side Tables</li>
+								<li>Bar Carts</li>
+								<li>Benches</li>
+								<li>All Tables & Carts</li>
+							</ul>
+							<ul>
+								<li>Accessories</li>
+								<li>Seating Accessories</li>
+								<li>Throw Pillows</li>
+								<li>Throw Blankets</li>
+								<li>Trays</li>
+								<li>Lighting</li>
+								<li>Clearance</li>
+								<li>All Accessories</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-
-			<div class="nav__tools">
-				<div class="shop"></div>
 			</div>
 		</nav>
 		<main>
