add: support for scripts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<nav class="nav">
 			<a href="#topics">Topics</a>
 			<a href="#classes">Classes</a>
+			<a href="#presentations">Presentations</a>
+			<a href="#exercises">Exercises</a>
+			<a href="#articles">Articles</a>
 		</nav>
 
 		<div class="presentation">
@@ -71,19 +74,51 @@
 		</div>
 
 		<div class="chapters" id="classes">
-			<a class="chapter">Aula 1</a>
-			<a class="chapter">Aula 2</a>
-			<a class="chapter">Aula 3</a>
-			<a class="chapter">Aula 4</a>
-			<a class="chapter">Aula 5</a>
-			<a class="chapter">Aula 6</a>
-			<a class="chapter">Aula 7</a>
-			<a class="chapter">Aula 8</a>
-			<a class="chapter">Aula 9</a>
+			<a class="chapter">
+				<span class="class-count">Aula 1</span>
+				<span class="class-type">html</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 2</span>
+				<span class="class-type">html</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 3</span>
+				<span class="class-type">css</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 4</span>
+				<span class="class-type">css</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 5</span>
+				<span class="class-type">css</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 6</span>
+				<span class="class-type">css</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 7</span>
+				<span class="class-type">css</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 8</span>
+				<span class="class-type">css</span>
+			</a>
+			<a class="chapter">
+				<span class="class-count">Aula 9</span>
+				<span class="class-type">Hands on</span>
+			</a>
 		</div>
 
+		<h2 class="section_title">Presentations</h2>
+		<div class="presentations" id="presentations"></div>
+
+		<h2 class="section_title">Exercises</h2>
 		<div class="exercises" id="exercises"></div>
 
+		<h2 class="section_title">Articles</h2>
 		<div class="reading" id="articles"></div>
 	</body>
 
