--- a/exercises/css-flags/index.html
+++ b/exercises/css-flags/index.html
@@ -17,9 +17,56 @@
 		</div>
 
 		<div class="flag_container">
+			<h3 class="flag_title">Ukraine</h3>
+			<div class="flag flag--ukraine">
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+			</div>
+		</div>
+
+		<div class="flag_container">
 			<h3 class="flag_title">Kuwait</h3>
 			<div class="flag flag--kuwait">
 				<div class="piece"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+			</div>
+		</div>
+
+		<div class="flag_container">
+			<h3 class="flag_title">Bangladesh</h3>
+			<div class="flag flag--bangladesh">
+				<div class="piece"></div>
+			</div>
+		</div>
+
+		<div class="flag_container">
+			<h3 class="flag_title">Portugal</h3>
+			<div class="flag flag--portugal">
+				<div class="green"></div>
+				<div class="red"></div>
+				<div class="yellow"></div>
+			</div>
+		</div>
+
+		<div class="flag_container">
+			<h3 class="flag_title">Japan</h3>
+			<div class="flag flag--japan">
+				<div class="piece"></div>
+			</div>
+		</div>
+
+		<div class="flag_container">
+			<h3 class="flag_title">Greece</h3>
+			<div class="flag flag--greece">
+				<div class="square"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
+				<div class="stripe"></div>
 				<div class="stripe"></div>
 				<div class="stripe"></div>
 				<div class="stripe"></div>
