add: design system exercise

--- a/examples/template.html
+++ b/examples/template.html
@@ -20,7 +20,7 @@
 						background: red;
 					}
 				</style>
-				<div class="box"></div>
+				<div class="box">asd</div>
 			</div>
 			<!-- Create an empty div for output -->
 		</div>
