add: first-class

--- a/exercises/css-design-systems/index.html
+++ b/exercises/css-design-systems/index.html
@@ -1,3 +1,7 @@
+<!-- 
+	Documentation: 
+	https://www.figma.com/file/udWyes5Zfj14qQDmD6oUzL/Edit---Design-Systems?type=design&node-id=2%3A783&mode=dev&t=RszSJCDWvtv4ecS1-1
+ -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
