--- a/index.html
+++ b/index.html
@@ -29,84 +29,56 @@
 		</div>
 
 		<div class="bento" id="topics">
-			<div class="box" data-type="html" style="--column-start: 1; --column-end: 3; --row-start: 1; --row-end: 4">
-				Síntaxe
-			</div>
-			<div class="box" data-type="html" style="--column-start: 3; --column-end: 4; --row-start: 1; --row-end: 3">
-				Características
-			</div>
-			<div class="box" data-type="html" style="--column-start: 0; --column-end: 0; --row-start: 0; --row-end: 0">
-				Tags
-			</div>
-			<div class="box" data-type="html" style="--column-start: 1; --column-end: 4; --row-start: 8; --row-end: 11">
-				Atributos
-			</div>
-			<div class="box" data-type="html" style="--column-start: 1; --column-end: 4; --row-start: 4; --row-end: 8">
-				Semântica
-			</div>
-			<div class="box" data-type="css" style="--column-start: 4; --column-end: 6; --row-start: 1; --row-end: 3">
-				CSS Síntaxe
-			</div>
-			<div class="box" data-type="css" style="--column-start: 6; --column-end: 9; --row-start: 1; --row-end: 6">
-				Especificidade
-			</div>
-			<div class="box" data-type="css" style="--column-start: 4; --column-end: 7; --row-start: 6; --row-end: 11">
-				Hierarquia
-			</div>
-			<div class="box" data-type="css" style="--column-start: 4; --column-end: 6; --row-start: 3; --row-end: 6">
-				Posicionamento
-			</div>
-			<div class="box" data-type="css" style="--column-start: 9; --column-end: 11; --row-start: 1; --row-end: 4">
-				Flex & Grid
-			</div>
-			<div class="box" data-type="css" style="--column-start: 7; --column-end: 9; --row-start: 6; --row-end: 7">
-				Animações
-			</div>
-			<div class="box" data-type="css" style="--column-start: 7; --column-end: 9; --row-start: 7; --row-end: 11">
-				Responsive Design
-			</div>
-			<div class="box" data-type="css" style="--column-start: 9; --column-end: 11; --row-start: 4; --row-end: 6">
-				Media Queries
-			</div>
-			<div class="box" data-type="css" style="--column-start: 9; --column-end: 11; --row-start: 6; --row-end: 11">
-				SASS
-			</div>
+			<div class="box" data-type="html" style="--column-start: 1; --column-end: 3; --row-start: 1; --row-end: 4">Síntaxe</div>
+			<div class="box" data-type="html" style="--column-start: 3; --column-end: 4; --row-start: 1; --row-end: 3">Características</div>
+			<div class="box" data-type="html" style="--column-start: 0; --column-end: 0; --row-start: 0; --row-end: 0">Tags</div>
+			<div class="box" data-type="html" style="--column-start: 1; --column-end: 4; --row-start: 8; --row-end: 11">Atributos</div>
+			<div class="box" data-type="html" style="--column-start: 1; --column-end: 4; --row-start: 4; --row-end: 8">Semântica</div>
+			<div class="box" data-type="css" style="--column-start: 4; --column-end: 6; --row-start: 1; --row-end: 3">CSS Síntaxe</div>
+			<div class="box" data-type="css" style="--column-start: 6; --column-end: 9; --row-start: 1; --row-end: 6">Especificidade</div>
+			<div class="box" data-type="css" style="--column-start: 4; --column-end: 7; --row-start: 6; --row-end: 11">Hierarquia</div>
+			<div class="box" data-type="css" style="--column-start: 4; --column-end: 6; --row-start: 3; --row-end: 6">Posicionamento</div>
+			<div class="box" data-type="css" style="--column-start: 9; --column-end: 11; --row-start: 1; --row-end: 4">Flex & Grid</div>
+			<div class="box" data-type="css" style="--column-start: 7; --column-end: 9; --row-start: 6; --row-end: 7">Animações</div>
+			<div class="box" data-type="css" style="--column-start: 7; --column-end: 9; --row-start: 7; --row-end: 11">Responsive Design</div>
+			<div class="box" data-type="css" style="--column-start: 9; --column-end: 11; --row-start: 4; --row-end: 6">Media Queries</div>
+			<div class="box" data-type="css" style="--column-start: 9; --column-end: 11; --row-start: 6; --row-end: 11">SASS</div>
 		</div>
 
 		<div class="chapters" id="classes">
-			<a class="chapter">
+			<a class="chapter" target="_blank" href="classes/class-1.html">
 				<span class="class-count">Aula 1</span>
 				<span class="class-type">html</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-2.html">
 				<span class="class-count">Aula 2</span>
 				<span class="class-type">html</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-3.html">
 				<span class="class-count">Aula 3</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-4.html">
 				<span class="class-count">Aula 4</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-5.html">
 				<span class="class-count">Aula 5</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-6.html">
 				<span class="class-count">Aula 6</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-7.html">
 				<span class="class-count">Aula 7</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-8.html">
 				<span class="class-count">Aula 8</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter">
+			<a class="chapter" target="_blank" disabled href="classes/class-9.html">
 				<span class="class-count">Aula 9</span>
 				<span class="class-type">Hands on</span>
 			</a>
