add: class 2 templates

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<span class="class-count">Aula 1</span>
 				<span class="class-type">html</span>
 			</a>
-			<a class="chapter" target="_blank" disabled href="classes/class-2.html">
+			<a class="chapter" target="_blank" href="classes/class-2.html">
 				<span class="class-count">Aula 2</span>
 				<span class="class-type">html</span>
 			</a>
